added link to warc-twarc.py

--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -7,7 +7,7 @@
     "# warc-twarc\n",
     "\n",
     "\n",
-    "This notebook demonstrates how to use [Webrecorder](http://webrecorder.io) to record a set of search results from Twitter and then extract the Twitter data for those results using [twarc](https://github.com/docnow/twarc).\n",
+    "This notebook demonstrates how to use [Webrecorder](http://webrecorder.io) to record a set of search results from Twitter and then extract the Twitter data for those results using [twarc](https://github.com/docnow/twarc). If you'd like to skip the explanation and just use the script from the command line you can find that [here](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py).\n",
     "\n",
     "---\n",
     "\n",
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Twitter Data\n",
+    "## Step 3: Get the Twitter Data\n",
     "\n",
     "Now that we have the tweet identifiers we can use [twarc](https://github.com/docnow/twarc) to fetch the Twitter JSON data for each tweet from Twitter's API. You will need to go to [apps.twitter.com](https://apps.twitter.com) to create an application, and get your API keys to use twarc.\n",
     "\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If it helps I've bundled all this into a single little utility here as [warc-twarc.py]()."
+    "If it helps I've bundled all this into a single little utility here as [warc-twarc.py](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py)."
    ]
   },
   {
