instructions for manually configuring twarc

--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +617,17 @@
    ],
    "source": [
     "import twarc\n",
+    "\n",
+    "# If you haven't configure twarc from the command line you can also set the keys manually \n",
+    "# by uncommenting and filling in the following text:\n",
+    "#\n",
+    "# CONSUMER_KEY = \"\"\n",
+    "# CONSUMER_SECRET = \"\"\n",
+    "# ACCESS_TOKEN = \"\"\n",
+    "# ACCESS_TOKEN_SECRET = \"\"\n",
+    "#\n",
+    "# twitter = twarc.Twarc(CONSUMER_KEY, CONSUMER_SECRET, ACCESS_TOKEN, ACCESS_TOKEN_SECRET)\n",
+    "\n",
     "twitter = twarc.Twarc()\n",
     "\n",
     "for tweet in twitter.hydrate(tweet_ids(warc_file)):\n",
