--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -7,7 +7,13 @@
     "# warc-twarc\n",
     "\n",
     "\n",
-    "This notebook demonstrates how to use [Webrecorder](http://webrecorder.io) to record a set of search results from Twitter and then extract the Twitter data for those results using [twarc](https://github.com/docnow/twarc). If you'd like to skip the explanation and just use the script from the command line you can find that [here](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py).\n",
+    "This notebook demonstrates how to use [Webrecorder](http://webrecorder.io) to record a set of search results from Twitter and then extract the Twitter data for those results using [twarc](https://github.com/docnow/twarc). The notebook will show how to record a search for tweets from Donald Trump that mention \"fake news\" and print out the time that the tweet was sent and the text of the tweet.\n",
+    "\n",
+    "If you'd like to skip the explanation and just use a script from the command line you can find that [here](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py). If you'd like to interact with this Notebook online without running it locally try it [binder](https://mybinder.org/):\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/edsu/warc-twarc/master?filepath=warc-twarc.ipynb)\n",
+    "\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
