--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "## Step 1: Recording a Twitter Search\n",
     "\n",
-    "First go to Twitter and [search](https://twitter.com/search/) for something that's of interst. For example you can search for all of Donald Trump's tweets that mention \"fake news\" with the query [from:realDonaldTrump \"fake news\"](https://twitter.com/search?q=from%3ArealDonaldTrump%20%22fake%20news%22&src=typd). Check out the [advanced search](https://twitter.com/search-advanced) page for all the ways of fine tuning a search. Note that you can limit by time, which we will return to later.\n",
+    "First go to Twitter and [search](https://twitter.com/search/) for something that's of interest. For example you can search for all of Donald Trump's tweets that mention \"fake news\" with the query [from:realDonaldTrump \"fake news\"](https://twitter.com/search?q=from%3ArealDonaldTrump%20%22fake%20news%22&src=typd). Check out the [advanced search](https://twitter.com/search-advanced) page for all the ways of fine tuning a search. Note that you can limit by time, which we will return to later.\n",
     "\n",
     "Now copy the URL in your browser and head over to [Webrecorder](https://webrecorder.io). Webrecorder lets you record the results of a series of interactions in your browser and download the data as a [WARC](https://en.wikipedia.org/wiki/Web_ARChive) file (more on WARC shortly). You'll probably want to register for an account since anonymous recording sessions will expire after some period of time.\n",
     "\n",
