--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "def extract_javascript(content):\n",
     "    # make sure the content is decoded or else json.loads complains\n",
     "    content = content.decode('utf-8')\n",
-    "    data = json.loads((content))\n",
+    "    data = json.loads(content)\n",
     "    for tweet_id in extract_html(data.get('items_html', '')):\n",
     "        yield tweet_id"
    ]
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If it helps I've bundled all this into a single little utility here as [warc-twarc.py](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py)."
+    "If it helps I've bundled all this into a single little utility here as [warc-twarc.py](https://github.com/edsu/warc-twarc/blob/master/warc-twarc.py).  Maybe it would be fun to do something a bit more interesting with the tweet metadata. I leave that for a future notebook, and to you!"
    ]
   },
   {
