--- a/warc-twarc.ipynb
+++ b/warc-twarc.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "If you scroll to the bottom of the screen you should see that the page automatically loads more tweets that match the search query. This is the so called *infinite scroll* behavior, where the web browser goes and fetches more tweet from Twitter and puts them into the page automatically.\n",
     "\n",
-    "Fortunately Webrecorder records all of these background interactions, and even provides an *autoscroll* function (a button at the top left of the screen). When you click on `autoscroll` Webrecorder will automatically scroll to the bottom of each page, triggering more results. You can let this run until it stops or until you've gotten enough results. **Add note about how much data can be retrieved via the search interface and using the date scoping**.\n",
+    "Fortunately Webrecorder records all of these background interactions, and even provides an *autoscroll* function (a button at the top left of the screen). When you click on `autoscroll` Webrecorder will automatically scroll to the bottom of each page, triggering more results. You can let this run until it stops or until you've gotten enough results.\n",
     "\n",
     "Once you are done hover over the *record* button just above *autoscroll* and click to *stop* the recording. You will then see a page that lists the recordings in your collection. And you should see the option to download the data (it's a little cloud with an arrow). Move the downloaded file into the directory containing this Jupyter notebook and set the `warc_file` variable."
    ]
@@ -672,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
